blue-green/blue-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: blue-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.1
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            port: 80
            path: /
