blue-green/green-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: blue-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            port: 80
            path: /
