blue-green/blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: blue-green
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
     app: blue
