blue-green/green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: blue-green
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
     app: green
