blue-green/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main
  namespace: blue-green
spec:
  tls:
    - hosts:
      - "example.com"
  rules:
  - host: "www.example.com"
    http:
      paths:
      - backend:
          service:
            name: blue
            port:
              number: 80
        path: /
        pathType: Prefix
